--- a/src/lennox-engine/lennox-engine.vcxproj.filters
+++ b/src/lennox-engine/lennox-engine.vcxproj.filters
@@ -56,11 +56,29 @@
     <Image Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png">
       <Filter>Elementy zawartości</Filter>
     </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="App.cpp" />
+    <ClCompile Include="pch.cpp" />
+    <ClCompile Include="LennoxEngine.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="App.h" />
+    <ClInclude Include="pch.h" />
+    <ClInclude Include="LennoxEngine.h" />
+  </ItemGroup>
+  <ItemGroup>
     <Image Include="Assets\StoreLogo.png">
-      <Filter>Zasoby</Filter>
+      <Filter>Elementy zawartości</Filter>
     </Image>
     <Image Include="Assets\Wide310x150Logo.scale-200.png">
-      <Filter>Zasoby</Filter>
+      <Filter>Elementy zawartości</Filter>
     </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <AppxManifest Include="Package.appxmanifest" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="lennox-engine_TemporaryKey.pfx" />
   </ItemGroup>
 </Project>
