--- a/src/lennox-engine/lennox-engine.vcxproj
+++ b/src/lennox-engine/lennox-engine.vcxproj
@@ -204,6 +204,7 @@
   <ItemGroup>
     <ClCompile Include="App.cpp" />
     <ClCompile Include="Common\DeviceResources.cpp" />
+    <ClCompile Include="Game\Main.cpp" />
     <ClCompile Include="LennoxEngine.cpp" />
     <ClCompile Include="Content\Sample3DSceneRenderer.cpp" />
     <ClCompile Include="pch.cpp">
